<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">pdaZ7jAa3ZznbNJI0YwHWFQ0ZYdRVvkani7M35Q0</string>
    <string name="parse_client_key">uLe1VwM4NQvZaEW4Lrt638PbtA4DRZszO77se8wa</string>

    <!-- activity labels -->
    <string name="app_name">Sleep Flower</string>
    <string name="sign_in">Sign in</string>
    <string name="wake_up">Sleep Record</string>
    <string name="reflect">Session Reflection</string>
    <string name="graph">Sleepiness Graph</string>

    <!-- menu labels -->
    <string name="action_sign_out">Sign out</string>
    <string name="action_group_sync">Sync Data</string>
    <string name="action_get_member">Sync Member</string>
    <string name="action_flower_sync">Sync My Flower</string>
    <string name="action_graph">Sleepiness Graph</string>

    <!-- shared preference labels -->
    <string name="signed_in">SIGNED_IN</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="group_id">GROUP_ID</string>
    <string name="record_updated">SLEEP_RECORD_UPDATED</string>
    <string name="sleepiness_updated">SLEEPINESS_UPDATED</string>
    <string name="healthy_consequence">HEALTHY_CONSEQUENCE</string>
    <string name="healthy_score">HEALTHY_SCORE</string>
    <string name="count">COUNT</string>
    <string name="count_neg">COUNT_NEG</string>
    <string name="until_next">UNTIL_NEXT</string>
    <string name="member_number">MEMBER_NUMBER</string>
    <string name="current_username">CURRENT_USERNAME</string>
    <string name="current_score">CURRENT_SCORE</string>
    <string name="member_set">MEMBER_SET</string>
    <string name="ave_score">AVE_SCORE</string>
    <string name="flower_state">FLOWER_STATE</string>

    <!-- sign in -->
    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="hint_group_id">Group ID</string>

    <!-- wake up -->
    <string name="hint_date">Date</string>
    <string name="hint_go_to_bed">Go to bed time (last night)</string>
    <string name="hint_wake_up">Wake up time</string>
    <string name="hint_memo">Memo (if any)</string>

    <!-- reflect-->
    <string name="check_sleepiness">Were you sleepy during this session?</string>
    <string name="sleepiness5">30分以上昼寝をした</string>
    <string name="sleepiness4">座ったまま寝落ちた</string>
    <string name="sleepiness3">意識が何度か途切れた</string>
    <string name="sleepiness2">うとうとした</string>
    <string name="sleepiness1">一切眠くなかった</string>
</resources>
