<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_flower_sync"
        android:orderInCategory="100"
        android:title="@string/action_flower_sync"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_group_sync"
        android:orderInCategory="100"
        android:title="@string/action_group_sync"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_get_member"
        android:orderInCategory="100"
        android:title="@string/action_get_member"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_graph"
        android:orderInCategory="100"
        android:title="@string/action_graph"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never"/>
</menu>
