<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/ScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_date"/>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_go_to_bed"/>

        <TimePicker
            android:id="@+id/go_to_bed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_wake_up"/>

        <TimePicker
            android:id="@+id/wake_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"/>

        <EditText
            android:id="@+id/memo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_memo"/>

        <Button
            android:id="@+id/save_record"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Save"/>
    </LinearLayout>
</ScrollView>
